opam-version: "2.0"
synopsis: "Cap'n Proto RPC client/server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-rpc"
doc: "https://mirage.github.io/irmin-rpc/doc"
bug-reports: "https://github.com/mirage/irmin-rpc/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "irmin-rpc"
  "irmin-mirage" {>= "dev"}
  "mirage-time" {>= "2.0.0"}
  "mirage-stack" {>= "2.0.0"}
  "dns-client"
  "capnp-rpc-mirage" {>= "0.9.0"}
  "capnp-rpc-lwt" {>= "0.9.0"}
  "capnp-rpc-net" {>= "0.9.0"}
  "irmin" {>= "dev"}
  "lwt" {>= "4.0.0"}
  "mirage-clock" {>= "3.0.0"}
  "mirage-random" {>= "2.0.0"}
  "uri" {>= "4.0.0"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/mirage/irmin-rpc"


pin-depends: [
  [
    "index.dev"
    "git+https://github.com/mirage/index#fb4b394edb31679376ecbe9c2385404df73e920b"
  ]
  [
    "ppx_irmin.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin-git.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin-fs.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin-graphql.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin-http.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin-layers.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin-pack.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
  [
    "irmin-mirage.dev"
    "git+https://github.com/mirage/irmin#b9849102b73a8036eb85e7bb7136bb35dbabf518"
  ]
]
