opam-version: "2.0"
synopsis: "Cap'n Proto RPC client/server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-rpc"
doc: "https://mirage.github.io/irmin-rpc/doc"
bug-reports: "https://github.com/mirage/irmin-rpc/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "capnp-rpc"
  "capnp-rpc-lwt"
  "capnp-rpc-unix"
  "capnp-rpc-net"
  "irmin"
  "irmin-rpc"
  "irmin-unix" {>= "dev"}
  "lwt"
  "sexplib0"
  "uri"
  "alcotest-lwt" {with-test & >= "1.0.0"}
  "checkseum" {>= "0.3.0"}
  "cmdliner" {>= "1.0.4"}
  "cohttp" {>= "2.0.0"}
  "digestif" {>= "0.9.0"}
  "git" {>= "3.0.0"}
  "git-unix" {>= "3.0.0"}
  "irmin-git" {>= "dev"}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/mirage/irmin-rpc"
pin-depends: [
  [
    "index.dev"
    "git+https://github.com/mirage/index#23e478e28662614abb4b01a7efb11532b08fb1c0"
  ]
  [
    "ppx_irmin.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin-git.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin-fs.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin-graphql.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin-http.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin-layers.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin-pack.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin-unix.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
]
