opam-version: "2.0"
synopsis: "Cap'n Proto RPC client/server for Irmin"
maintainer: "Zach Shipko <zachshipko@gmail.com>"
authors: "Zach Shipko <zachshipko@gmail.com>"
license: "ISC"
homepage: "https://github.com/mirage/irmin-rpc"
doc: "https://mirage.github.io/irmin-rpc/doc"
bug-reports: "https://github.com/mirage/irmin-rpc/issues"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.0.0"}
  "capnp"
  "capnp-rpc"
  "capnp-rpc-lwt"
  "capnp-rpc-net"
  "cohttp"
  "fmt"
  "irmin" {>= "dev"}
  "lwt"
  "result" {>= "1.5"}
  "logs" {>= "0.7.0"}
  "repr" {>= "0.2.0"}
  "alcotest" {>= "1.0.0" & with-test}
  "alcotest-lwt" {>= "1.0.0" & with-test}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name] {with-test}
]
dev-repo: "git+ssh://github.com/mirage/irmin-rpc"
pin-depends: [
  [
    "ppx_irmin.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
  [
    "irmin.dev"
    "git+https://github.com/mirage/irmin#8f20cadd955c21895214c5105daa239f61f06413"
  ]
]
