(library
 (name bench_common)
 (modules bench_common)
 (libraries irmin-pack irmin-rpc-unix unix))

;; Require the above executables to compile during tests

(executable
 (name tree)
 (modules tree)
 (public_name tree)
 (package irmin-rpc-unix)
 (preprocess
  (pps ppx_deriving_yojson ppx_repr))
 (libraries irmin-rpc-unix lwt unix cmdliner logs yojson ppx_deriving_yojson
   memtrace repr ppx_repr bench_common))
